tests/errors/examples/infinite_type.vg
<!-- Expected Error: Occurs check - infinite type detected
     Context: Type variable appears in its own definition
     
     This creates a situation where a type variable would need to contain itself,
     resulting in an infinite type. This can happen with certain recursive patterns
     or when a function's return type depends on itself in an impossible way.
-->
<view name="Test">
  <div>{recursive(recursive)}</div>
</view>
